--- a/coder/backend/src/main/resources/templates/registration.html
+++ b/coder/backend/src/main/resources/templates/registration.html
@@ -12,11 +12,29 @@
     -ms-transform: translate(-50%, -50%);
     transform: translate(-50%, -50%);
 }
+h2 {
+  font-family: sans-serif;
+}
+input[type=text], input[type=password] {
+  margin-bottom: 5px;
+}
+input[type=submit] {
+  background-color: #4A8246;
+  color: white;
+  border-radius: 5%;
+  border: 2px solid #4A8246;
+  margin-top: 5px;
+  margin-bottom: 5px;
+  padding: 5px 7px;
+}
+input[type=submit]:hover {
+  cursor: pointer;
+}
     </style>
 </head>
 <body>
 <div class="middleOfBrowser">
-    <h2>Registration!</h2>
+    <h2>Registration</h2>
     <form th:action="@{/registration}" method="post">
         <div th:if="${userAlreadyExists}">
             This user already exists.
