--- a/coder/backend/src/main/resources/static/mystyle.css
+++ b/coder/backend/src/main/resources/static/mystyle.css
@@ -1,18 +1,58 @@
 html,body{height:100%}
 #monacoEditor {
 width: 100%;
-height: 75%;
+height: 50%;
 margin: 0;
 padding: 0;
 }
-button {
-background-color: #4CAF50; /* Green */
+h1 {
+  font-family: sans-serif;
+  font-size: 24px;
+}
+h2 {
+  font-family: sans-serif;
+  font-size: 16px;
+}
+a {
+  font-family: sans-serif;
+  text-decoration:none;
+}
+a:link {
+  color: #4A8246;
+  text-decoration: none;
+}
+a:visited {
+  color: #4A8246;
+  text-decoration: none;
+}
+#submit {
+  background-color: #4A8246; /* Green */
   border: 1px;
   color: white;
   padding: 15px 32px;
   text-align: center;
   text-decoration: none;
   display: inline-block;
+  font-family: sans-serif;
   font-size: 16px;
   border-radius: 5%;
+}
+button:hover {
+  cursor: pointer;
+  border: 2px solid lightgrey;
+}
+#homebutton {
+  background-color: #4A8246;
+  color: white;
+  font-family: sans-serif;
+  font-size: 11pt;
+  border-radius: 5%;
+  border: 2px solid #4A8246;
+  padding: 7px 15px;
+}
+#taskDescription {
+  font-family: sans-serif;
+}
+#evaluation {
+  font-family: sans-serif;
 }
