--- a/coder/backend/src/main/resources/templates/index.html
+++ b/coder/backend/src/main/resources/templates/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html SYSTEM "http://www.thymeleaf.org/dtd/xhtml1-strict-thymeleaf-4.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
+<head>
+    <link rel="stylesheet" href="mystyle.css">
+</head>
 <body>
 <h1>Hello, <span th:text="${userName}"></span>!</h1>
 <h2>Coding tasks:</h2>
