--- a/coder/backend/src/main/resources/templates/registration.html
+++ b/coder/backend/src/main/resources/templates/registration.html
@@ -2,35 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
 <head>
     <title>Registration</title>
-    <style>
-.middleOfBrowser{
-    width=40%;
-    text-align:center;
-    left: 50%;
-    top: 30%;
-    position: absolute;
-    -ms-transform: translate(-50%, -50%);
-    transform: translate(-50%, -50%);
-}
-h2 {
-  font-family: sans-serif;
-}
-input[type=text], input[type=password] {
-  margin-bottom: 5px;
-}
-input[type=submit] {
-  background-color: #4A8246;
-  color: white;
-  border-radius: 5%;
-  border: 2px solid #4A8246;
-  margin-top: 5px;
-  margin-bottom: 5px;
-  padding: 5px 7px;
-}
-input[type=submit]:hover {
-  cursor: pointer;
-}
-    </style>
+    <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
 <div class="middleOfBrowser">
