--- a/coder/backend/src/main/resources/templates/index.html
+++ b/coder/backend/src/main/resources/templates/index.html
@@ -5,7 +5,7 @@
 </head>
 <body>
     <header>
-        <a class="title"href="../"> YeetCode </a>
+        <a class="title" href="../"> YeetCode </a>
         <div class="usermenu">
             <span th:text="${userName}"></span> <img class="profileicon" src="../Profile_Icon.png" alt="x" width="32" height="32">
             <div class="dropdown">
@@ -17,9 +17,10 @@
         </div>
     </header>
     <h1>Hello, <span th:text="${userName}"></span>!</h1>
+
     <h2>Coding tasks:</h2>
     <div class="taskboxes">
-        <div th:each="taskPair : ${tasks}">
+        <div th:each="taskPair : ${codeTasks}">
             <div> <a th:href="@{/codingTask.html(task = ${taskPair.codeTask.name}, language = java)}">
                 <button class="taskbutton">
                     <div class="taskname" th:text="${taskPair.codeTask.displayName}"></div> <hr>
@@ -29,5 +30,19 @@
             </div>
         </div>
     </div>
+
+    <h2>Coding output:</h2>
+    <div class="taskboxes">
+        <div th:each="taskPair : ${outputTasks}">
+            <div> <a th:href="@{/outputTask(taskName = ${taskPair.codeTask.name})}">
+                <button class="taskbutton">
+                    <div class="taskname" th:text="${taskPair.codeTask.displayName}"></div> <hr>
+                    <div class="boxdescription" th:text="${taskPair.codeTask.shortDescription}"> </div>
+                    <div class="status"> <img class="profileicon" th:src="${taskPair.attempted}" alt="x" width="32" height="32"></div>
+                </button></a>
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
