--- a/coder/backend/src/main/resources/templates/succ.html
+++ b/coder/backend/src/main/resources/templates/succ.html
@@ -5,11 +5,11 @@
     <title>Title</title>
 </head>
 <body>
-<img src="1674767932906.jpg" width="258" height="39" alt="YeetCode"/>
+<h1>YeetCode</h1>
 <hr />
 <div id="header" style="background-color:#2E8B57;">
     <h1 style="margin-bottom:10;text-align:center;">Logout Successful</h1></div>
 <div id="menu" style="text-align:center;">
-    <a href="localhost:8080/login">zurück loginPage</a></div>
+    <a href="/">Login</a></div>
 </body>
 </html>
