--- a/coder/backend/src/main/resources/templates/index.html
+++ b/coder/backend/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
             <div class="dropdown">
                 <ul class="dropdownlist">
                     <li><a> Account</a></li>
-                    <li><a> Logout </a></li>
+                    <li><a th:href="@{/succ}">logout</a></li>
                 </ul>
             </div>
         </div>
