--- a/coder/backend/src/main/resources/templates/succ.html
+++ b/coder/backend/src/main/resources/templates/succ.html
@@ -10,6 +10,6 @@
 <div id="header" style="background-color:#2E8B57;">
     <h1 style="margin-bottom:10;text-align:center;">Logout Successful</h1></div>
 <div id="menu" style="text-align:center;">
-    <a th:href="@{/login}">Login</a></div>
+    <a href="/">Login</a></div>
 </body>
 </html>
