--- a/coder/backend/src/main/resources/templates/outputTask.html
+++ b/coder/backend/src/main/resources/templates/outputTask.html
@@ -16,7 +16,7 @@
         <div class="dropdown">
             <ul class="dropdownlist">
                 <li><a> Account</a></li>
-                <li><a> Logout </a></li>
+                <li><a href="/logout"> Logout </a></li>
             </ul>
         </div>
     </div>
