--- a/coder/backend/src/main/resources/templates/logoutSuccessful.html
+++ b/coder/backend/src/main/resources/templates/logoutSuccessful.html
@@ -2,14 +2,16 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Logout</title>
+    <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
-<h1>YeetCode</h1>
-<hr />
-<div id="header" style="background-color:#2E8B57;">
-    <h1 style="margin-bottom:10;text-align:center;">Logout Successful</h1></div>
-<div id="menu" style="text-align:center;">
-    <a href="/">Login</a></div>
+    <header>
+        <div class="title">YeetCode</div>
+    </header>
+    <div id="header">Logout Successful</div>
+    <div id="menu">
+        <a id="backtologin" href="/">Login</a>
+    </div>
 </body>
 </html>
