--- a/coder/backend/src/main/resources/templates/registration.html
+++ b/coder/backend/src/main/resources/templates/registration.html
@@ -5,6 +5,9 @@
     <link rel="stylesheet" href="mystyle.css">
 </head>
 <body>
+<header>
+    <div class="title">YeetCode</div>
+</header>
 <div class="middleOfBrowser">
     <h2>Registration</h2>
     <form th:action="@{/registration}" method="post">
