--- a/coder/backend/src/main/resources/templates/index.html
+++ b/coder/backend/src/main/resources/templates/index.html
@@ -11,7 +11,7 @@
             <div class="dropdown">
                 <ul class="dropdownlist">
                     <li><a> Account</a></li>
-                    <li><a th:href="@{/logout}">logout</a></li>
+                    <li><a th:href="@{/logout}">Logout</a></li>
                 </ul>
             </div>
         </div>
@@ -43,6 +43,5 @@
             </div>
         </div>
     </div>
-
 </body>
 </html>
