--- a/coder/backend/src/main/resources/templates/login.html
+++ b/coder/backend/src/main/resources/templates/login.html
@@ -5,6 +5,9 @@
     <title>Login</title>
 </head>
 <body>
+<header>
+    <div class="title">YeetCode</div>
+</header>
 <div class="middleOfBrowser">
     <h2>Login</h2>
     <form th:action="@{/login}" method="post">
