--- a/coder/backend/src/main/resources/templates/index.html
+++ b/coder/backend/src/main/resources/templates/index.html
@@ -10,7 +10,7 @@
             <span th:text="${userName}"></span> <img class="profileicon" src="../Profile_Icon.png" alt="x" width="32" height="32">
             <div class="dropdown">
                 <ul class="dropdownlist">
-                    <li><a> Account</a></li>
+                    <li th:if="${userName=='admin'}"><a href="../admin"> Admin Mode</a></li>
                     <li><a th:href="@{/logout}">Logout</a></li>
                 </ul>
             </div>
