--- a/coder/backend/src/main/resources/templates/outputTask.html
+++ b/coder/backend/src/main/resources/templates/outputTask.html
@@ -15,12 +15,12 @@
                                                  height="32">
         <div class="dropdown">
             <ul class="dropdownlist">
-                <li><a> Account</a></li>
                 <li><a href="/logout"> Logout </a></li>
             </ul>
         </div>
     </div>
 </header>
+<a href="../"><button id="homebutton">Back to Homepage</button></a>
 <h1 id="taskName" th:text="${codeTaskAndSolution.task.displayName}">Task Name</h1>
 <p id="taskDescription" th:text="${codeTaskAndSolution.task.taskDescription}">This is the description of the task.</p>
 <div style="width:100%;height:100%;display: flex">
