--- a/coder/backend/src/main/resources/templates/admin/editOutputTask.html
+++ b/coder/backend/src/main/resources/templates/admin/editOutputTask.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-  <link rel="stylesheet" href="mystyle.css">
+  <link rel="stylesheet" href="../mystyle.css">
   <meta charset="UTF-8">
   <title>Create Coding Task</title>
 </head>
 <body>
 <header>
-  <a class="title" href="admin"> YeetCode </a>
+  <a class="title" href="/admin"> YeetCode </a>
   <div class="usermenu">
     <span th:text="${userName}"></span> <img class="profileicon" src="../Profile_Icon.png" alt="x" width="32" height="32">
     <div class="dropdown">
@@ -18,7 +18,7 @@
     </div>
   </div>
 </header>
-<a href="admin"><button id="homebutton">Back to Homepage</button></a>
+<a href="/admin"><button id="homebutton">Back to Homepage</button></a>
 <form id="createtaskform">
   <label for="taskname"> Task Name </label><br>
   <input type="text" id="taskname" name="taskname"><br>
