--- a/coder/backend/src/main/resources/templates/admin/editOutputTask.html
+++ b/coder/backend/src/main/resources/templates/admin/editOutputTask.html
@@ -19,19 +19,20 @@
   </div>
 </header>
 <a href="/admin"><button id="homebutton">Back to Homepage</button></a>
-<form id="createtaskform">
+<form id="createtaskform" th:action="@{/admin/editTask}" method="post" th:object="${codeTask}">
   <label for="taskname"> Task Name </label><br>
-  <input type="text" id="taskname" name="taskname"><br>
+  <input type="text" id="taskname" name="taskname" th:value="${task.name}"><br>
   <label for="displayname"> Display Name </label><br>
-  <input type="text" id="displayname" name="displayname"><br>
+  <input type="text" id="displayname" name="displayname" th:value="${task.displayName}"><br>
   <label for="description"> Task Description </label><br>
-  <textarea id="description" name="description"></textarea><br>
+  <textarea id="description" name="description" th:text="${task.taskDescription}"></textarea><br>
   <label for="shortdescription"> Short Description </label><br>
-  <input type="text" id="shortdescription" name="shortdescription"><br>
-  <label for="code"> Code </label><br>
-  <textarea id="code" name="code"></textarea><br>
+  <input type="text" id="shortdescription" name="shortdescription" th:value="${task.taskDescription}"><br>
+  <label for="code"> Code Template </label><br>
+  <textarea id="code" name="code" th:text="${task.codeTemplate}"></textarea><br>
   <label for="output"> Output </label><br>
-  <input type="text" id="output" name="output"><br>
+  <input type="text" id="output" name="test" th:value="${sampleSolution}"><br>
+  <input type="hidden" name="taskType" value="write_output">
   <input id="createbutton" type="submit" value="Save Changes">
 </form>
 </body>
