--- a/coder/backend/src/main/resources/templates/admin/editOutputTask.html
+++ b/coder/backend/src/main/resources/templates/admin/editOutputTask.html
@@ -27,13 +27,18 @@
   <label for="description"> Task Description </label><br>
   <textarea id="description" name="description" th:text="${task.taskDescription}"></textarea><br>
   <label for="shortdescription"> Short Description </label><br>
-  <input type="text" id="shortdescription" name="shortdescription" th:value="${task.taskDescription}"><br>
+  <input type="text" id="shortdescription" name="shortdescription" th:value="${task.shortDescription}"><br>
   <label for="code"> Code Template </label><br>
   <textarea id="code" name="code" th:text="${task.codeTemplate}"></textarea><br>
   <label for="output"> Output </label><br>
   <input type="text" id="output" name="test" th:value="${sampleSolution}"><br>
   <input type="hidden" name="taskType" value="write_output">
+  <input type="hidden" name="originalName" th:value="${task.name}">
   <input id="createbutton" type="submit" value="Save Changes">
+</form>
+<form id="deleteForm" th:action="@{/admin/deleteTask}" method="post">
+  <input type="hidden" name="taskName" th:value="${task.name}">
+  <input class="formbutton" type="submit" value="Delete Task" onClick="return confirm('sure?')"/>
 </form>
 </body>
 </html>
